# woxml

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile.toml  README.md  laze-project.yml  rustfmt.toml
.cargo/: config.toml
benches/: woxml.rs
coverage/: lcov.info
embedded/: laze.yml
embedded/ariel-os/: laze.yml
embedded/ariel-os/benchmark/: Cargo.toml  laze.yml
embedded/ariel-os/testing/: Cargo.toml  laze.yml
embedded/ariel-os/testing/.cargo/: config.toml
embedded/ariel-os/testing/tests/: test.rs
embedded/ariel-os/usage/: Cargo.toml  laze.yml
embedded/ariel-os/usage/src/: main.rs
embedded/benchmark/: Cargo.toml  laze.yml
embedded/benchmark/src/: main.rs
embedded/testing/: Cargo.toml  laze.yml
embedded/testing/tests/: test.rs
embedded/usage/: Cargo.toml  laze.yml
embedded/usage/src/: main.rs
mcdc/: mcdc.json  summary.json
mcdc/html/: index.html
mcdc/html/coverage/home/stephan/.dbx/stepkun/woxml/src/: woxml.rs.html  write.rs.html  write_implementations.rs.html
src/: error.rs  lib.rs  woxml.rs  write.rs
supply-chain/: config.toml
tests/: woxml.rs  write.rs
