# Copyright © 2025 Stephan Kunz
[package]
resolver = "3"
name = "woxml"
version = "0.4.2"
edition = "2024"
license = "MIT/Apache-2.0"
authors = ["stepkun <stephan.kunz@kabelbw.de>"]
description = "write only xml"
repository = "https://github.com/dibbots/woxml.git"
homepage = "https://dibbots.com/"
documentation = "https://docs.rs/woxml"
readme = "README.md"
keywords = ["xml"]
categories = ["development-tools"]
exclude = ["laze*", "benches/**", "embedded/**", "examples/**", "tests/**"]

[lib]
name = "woxml"

[lints.rust]
missing_docs = "warn"
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(context, values(any()))',
] }
unsafe_code = "warn"
unused_must_use = "warn"

[lints.rustdoc]
private_intra_doc_links = "allow"

[lints.clippy]
enum_glob_use = "deny"
expect_used = "deny"
nursery = { level = "deny", priority = -1 }
panic = "deny"
pedantic = { level = "deny", priority = -1 }
unwrap_used = "deny"


[[bench]]
name = "woxml"
harness = false

[dependencies]
bytes = { version = "1", default-features = false }

[build-dependencies]

[dev-dependencies]
criterion = "0.8"

[features]
default = ["std"]
std = ["bytes/std"]
