[package]
name = "woxml-benchmark"
edition.workspace = true
license.workspace = true
authors.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../build/imports/ariel-os/src/ariel-os", features = ["bench"] }
ariel-os-boards = { path = "../../build/imports/ariel-os/src/ariel-os-boards" }
#woxml = { path = "../.." }
