[package]
name = "woxml-testing"
edition.workspace = true
license.workspace = true
authors.workspace = true

publish = false

[lints]
workspace = true

[dependencies]
ariel-os = { path = "../../build/imports/ariel-os/src/ariel-os", features = [] }
ariel-os-boards = { path = "../../build/imports/ariel-os/src/ariel-os-boards" }
#woxml = { path = "../.." }

[dev-dependencies]
embedded-test = { version = "0.6.1", default-features = false, features = [
  "ariel-os",
  "semihosting",
] }

[[test]]
name = "test"
harness = false
